# aau-p2-stockfish

./: Dockerfile  README.md  compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  flake8.yml  formatting-and-linting.yml  pylint.yml  pytest.yml  ruff.yml
app/: main.py  test_main.py
src/chess_teacher_stockfish/: main.py
tests/: test_main.py
