[project]
name = "chess-teacher-stockfish"
requires-python = ">=3.12"

[tool.black]
line-length = 88

[tool.poetry]
name = "chess_teacher_stockfish"
version = "0.1.0"
description = "REST API component of ChessTeacher application"
authors = ["Sebastian Hemmer Bech Mygind", "Simon Woidemann", "Martin Kedmenec"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
stockfish = { git = "https://github.com/py-stockfish/stockfish.git", rev = "f2cb530" }
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
inflection = "^0.5.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pylint = "^3.1.0"
ruff = "^0.3.4"
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
